--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -45,11 +43,9 @@
                     </div>
                     <div style="clear:both"></div>
                     <div class="form-group value-input">
-                        <!-- <label for="your-val">Value:</label> -->
-                        <input type="number" class="form-control" id="your-val" placeholder="Your value">
+                        <input type="number" class="form-control" min="0" id="your-val" placeholder="Your value">
                     </div>
                     <div style="clear:both"></div>
-
                     <button type="submit" class="result-btn" id="button">Show results</button>
                 </form>
                 <div class="calculated">
